--- a/api/.env
+++ b/api/.env
@@ -1,7 +1,7 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=rbdyd!@0209
-DB_NAME=special
+MAC_DB_HOST=localhost
+MAC_DB_USER=root
+MAC_DB_PASSWORD=rbdyd!@0209
+MAC_DB_NAME=special
 
 
 SPECIAL_HOST = 172.19.152.27
